added a level highlight to ob directive

--- a/i2037-client/app/js/fx/directives/quote-panel.tpl.html
+++ b/i2037-client/app/js/fx/directives/quote-panel.tpl.html
@@ -14,7 +14,7 @@
             </div>
           </i2-tile>
         </div>  
-        <i2-order-book ob="quote.sell" align="right"></i2-order-book>
+        <i2-order-book ob="quote.sell" align="right" level="quote.sellLevel"></i2-order-book>
       </div>
       <div class="x-center-col">
         <i2-vwap-tiles quote="quote"></i2-vwap-tiles>
@@ -29,7 +29,7 @@
             </div>
           </i2-tile>
         </div>
-        <i2-order-book ob="quote.buy"></i2-order-book>        
+        <i2-order-book ob="quote.buy" level="quote.buyLevel"></i2-order-book>        
       </div>
     </div>
   </div>
