--- a/i2037-client/app/js/journal/journal-calendar.tpl.html
+++ b/i2037-client/app/js/journal/journal-calendar.tpl.html
@@ -1,3 +1,16 @@
 <div class="col-md-12">
-    <div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources"></div>
+  <div class="row">
+    <div class="col-md-4 col-md-offset-8">
+      <div class="btn-group pull-right">
+        <button class="btn btn-default" ng-click="prev()"><span class="glyphicon glyphicon-step-backward"></span></button>
+        <button class="btn btn-default" ng-click="today()">Today</button>
+        <button class="btn btn-default" ng-click="next()"><span class="glyphicon glyphicon-step-forward"></span></button>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div ui-calendar="uiConfig.calendar" class="calendar" ng-model="eventSources" calendar="calendar"></div>
+    </div>
+  </div>
 </div>
