Added crude map flyout, centre on first place

--- a/i2037-client/app/js/common/directives/timeline.tpl.html
+++ b/i2037-client/app/js/common/directives/timeline.tpl.html
@@ -15,12 +15,12 @@
       <td colspan="4">
         <div ng-controller="TimelineEntryCtrl" ng-switch="entry.type">
             <div class="well" ng-switch-when="MOVES_PLACE">
-                <a ng-href="{{entry.venue.canonicalUrl}}">Provided by {{entry.venue.type}}</a>
+                <a ng-href="{{venue.canonicalUrl}}">Provided by {{venue.type}}</a>
                 <address>
-                    {{entry.venue.address}}<br>
-                    <abr title="Telephone">T: </abr><a ng-href="tel:{{entry.venue.phone}">{{entry.venue.formattedPhone}}</a>
+                    {{venue.address}}<br>
+                    <abr title="Telephone">T: </abr><a ng-href="tel:{{venue.phone}">{{venue.formattedPhone}}</a>
                 </address>
-                <a ng-href="{{entry.venue.url}}">{{entry.venue.url | trim:30 }}</a>
+                <a ng-href="{{venue.url}}">{{venue.url | trim:30 }}</a>
             </div>
             <a ng-switch-when="FLICKR_PHOTOS" ng-href="{{entry.entry.payload.url_c}}" class="thumbnail">
               <img ng-src="{{entry.entry.payload.url_m}}" width="{{entry.entry.payload.width_m}}" height="{{entry.entry.payload.height_m}}">
@@ -28,7 +28,7 @@
             <div i2-comment="newComment" i2-save="saveComment(comment, entry)" i2-maxlength="255"></div>
             <hr>    
             <ul class="media-list">
-                <li i2-comment="comment" ng-repeat="comment in entry.comments"
+                <li i2-comment="comment" ng-repeat="comment in comments"
                     i2-save="saveComment(comment, entry)" 
                     i2-delete="deleteComment(comment, entry)"
                     i2-maxlength="255"></li>
