--- a/i2037-client/app/js/journal/journal-date.tpl.html
+++ b/i2037-client/app/js/journal/journal-date.tpl.html
@@ -26,7 +26,7 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-md-3" ng-controller="TimelineCtrl">
+        <div class="col-md-3 i2-timeline" ng-controller="TimelineCtrl">
             <div i2-timeline="entries" i2-selected="selected"></div>
         </div>        
         <div class="col-md-9" ng-controller="MovesMapCtrl">
