--- a/i2037-mobile/www/index.html
+++ b/i2037-mobile/www/index.html
@@ -16,8 +16,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/i2037-mobile.js"></script>
   </head>
 
   <body ng-app="i2037-mobile">
