--- a/i2037-mobile/www/index.html
+++ b/i2037-mobile/www/index.html
@@ -11,16 +11,36 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/moment/moment.js"
+    <script src="lib/moment/moment.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <script>
+      var require = {
+        baseUrl: 'js',
+
+        paths: {
+          "rx": "http://cdnjs.cloudflare.com/ajax/libs/rxjs/3.1.2/rx",
+          "rx.time": "http://cdnjs.cloudflare.com/ajax/libs/rxjs/3.1.2/rx.time",
+          "rx.experimental": "http://cdnjs.cloudflare.com/ajax/libs/rxjs/3.1.2/rx.experimental"
+        }
+      }
+    </script>
+
+    <script src="lib/requirejs/require.js"></script>
+
     <!-- your app's js -->
-    <script src="js/i2037-mobile.js"></script>
+    <!--<script src="js/app.js"></script>-->
+    <!--<script src="js/common/directives/calendar.js"></script>-->
+    <!--<script src="js/journal/journal.js"></script>-->
+    <!--<script src="js/test.js"></script>-->
+    <script>
+      requirejs(['main']);
+    </script>
   </head>
 
-  <body ng-app="i2037-mobile">
+  <body>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
