finally got the rxjs test working

--- a/i2037-mobile/www/index.html
+++ b/i2037-mobile/www/index.html
@@ -10,8 +10,10 @@
     <link href="css/ionic.app.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
+    <script src="lib/rxjs/dist/rx.all.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/moment/moment.js"></script>
+    <script src="lib/rx-angular/dist/rx.angular.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
