replace requirejs with systemjs

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -73,24 +73,26 @@
 
     </div>
 
-<!-- @if NODE_ENV == 'DEV' -->  
+    <!-- @if NODE_ENV == 'DEV' -->
+    <script src="lib/system.js"></script>
     <script src="lib/jquery.js"></script>
     <script src="lib/bootstrap.js"></script>
     <script src="lib/deps.js"></script>
     <script src="lib/angular.js"></script>
-    <script data-main="js/main" src="lib/require.js"></script>
-    <script>
-
-    </script>
 <!-- @endif -->
 <!-- @if NODE_ENV == 'PROD' -->
+    <script src="lib/system.min.js"></script>
     <script src="lib/jquery.min.js"></script>
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/deps.min.js"></script>
     <script src="lib/angular.min.js"></script>
-    <script src="lib/require.min.js"></script>
-    <script src="js/i2037-client.min.js"></script>
 <!-- @endif -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE&amp;sensor=false"></script>
+    <script>
+      System.config({
+        packages: {'js': {defaultExtension: 'js'}}
+      });
+      System.import('js/i2037');
+    </script>
 </body>
 </html>
