add angular2 upgradeAdapter

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -79,6 +79,7 @@
     <script src="lib/bootstrap.js"></script>
     <script src="lib/deps.js"></script>
     <script src="lib/angular.js"></script>
+    <script src="lib/angular2.js"></script>
 <!-- @endif -->
 <!-- @if NODE_ENV == 'PROD' -->
     <script src="lib/system.min.js"></script>
@@ -86,6 +87,7 @@
     <script src="lib/bootstrap.min.js"></script>
     <script src="lib/deps.min.js"></script>
     <script src="lib/angular.min.js"></script>
+    <script src="lib/angular2.min.js"></script>
 <!-- @endif -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE&amp;sensor=false"></script>
     <script>
