angular2 beta3, restore jasmine tsd and fix up a loginform test

--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -89,7 +89,7 @@
     <script src="lib/angular.min.js"></script>
     <script src="lib/angular2.min.js"></script>
 <!-- @endif -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE&amp;sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE"></script>
     <script>
       System.config({
         packages: {'js': {defaultExtension: 'js'}}
