--- a/i2037-client/app/index.html
+++ b/i2037-client/app/index.html
@@ -89,8 +89,15 @@
 <!-- @endif -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1XkZF2vEwPUZeFfadDMe76ozKhrk-mXE"></script>
     <script src="systemjs.config.js"></script>
+    <!-- @if NODE_ENV == 'DEV' -->
     <script>
       System.import('js/main.js').catch(function (err) { console.error(err) });
     </script>
+    <!-- @endif -->
+    <!-- @if NODE_ENV == 'PROD' -->
+    <script>
+      System.import('js/bundle.js').catch(function (err) { console.error(err) });
+    </script>
+    <!-- @endif -->
 </body>
 </html>
